// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button(snapshot testing) Button sizes 1`] = `
<button
  class="sc-jzJRlG hCLTUC"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my small button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button sizes 2`] = `
<button
  class="sc-jzJRlG bvPtYt"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my default size(md) button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button sizes 3`] = `
<button
  class="sc-jzJRlG laEcew"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my large button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button-default 1`] = `
<button
  class="sc-jzJRlG bvPtYt"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my simple button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 1`] = `
<button
  class="sc-jzJRlG gxruXm"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 2`] = `
<button
  class="sc-jzJRlG gxruXm"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs kavVik"
    color="blue"
    data-test="span"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 3`] = `
<button
  class="sc-jzJRlG gxruXm"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 1`] = `
<button
  class="sc-jzJRlG gbUyZi"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 2`] = `
<button
  class="sc-jzJRlG gbUyZi"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs gFTDWP"
    color="darkblue"
    data-test="span"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 3`] = `
<button
  class="sc-jzJRlG gbUyZi"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 4`] = `
<button
  class="sc-jzJRlG bvPtYt"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 5`] = `
<button
  class="sc-jzJRlG bvPtYt"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 6`] = `
<button
  class="sc-jzJRlG bvPtYt"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 1`] = `
<button
  class="sc-jzJRlG cRHvZk"
  data-styletype="primary"
  data-test="button"
  disabled=""
  type="submit"
>
  <div
    class="sc-cSHVUG iLCKLm sc-fjdhpX eDFlZt"
  >
    <i
      class="icon-watch_later sc-jTzLTM claoVk"
      color="white"
      data-test="icon"
    />
  </div>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my blue iconic disabled primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 2`] = `
<button
  class="sc-jzJRlG bWWMtl"
  data-styletype="secondary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs Bjkai"
    color="red"
    data-test="span"
  >
    my red disabled secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 3`] = `
<button
  class="sc-jzJRlG kxqaOX"
  data-styletype="tertiary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my disabled tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 4`] = `
<a
  class="sc-chPdSV dqReCj"
  href="/avatar"
  target="_self"
>
  <button
    class="sc-jzJRlG kxqaOX"
    data-styletype="primary"
    data-test="button"
    disabled=""
    type="submit"
  >
    <span
      class="sc-htoDjs bgiUUZ"
      color="white"
      data-test="span"
    >
      my disabled primary linked-button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) full-width button 1`] = `
<button
  class="sc-jzJRlG grsnUp"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my wide button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 1`] = `
<button
  class="sc-jzJRlG cGQlhu"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 2`] = `
<button
  class="sc-jzJRlG cGQlhu"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs jpsEjs"
    color="green"
    data-test="span"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 3`] = `
<button
  class="sc-jzJRlG cGQlhu"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) linked Buttons 1`] = `
<a
  class="sc-chPdSV dqReCj"
  href="/avatar"
  target="_self"
>
  <button
    class="sc-jzJRlG bvPtYt"
    data-styletype="primary"
    data-test="button"
    type="submit"
  >
    <span
      class="sc-htoDjs bgiUUZ"
      color="white"
      data-test="span"
    >
      my simplest linked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) linked Buttons 2`] = `
<a
  class="sc-kAzzGY EsDnJ"
  href="https://sciencebusiness.net/categories/dfgdfg"
  target="_blank"
>
  <button
    class="sc-jzJRlG bvPtYt"
    data-styletype="secondary"
    data-test="button"
    type="submit"
  >
    <div
      class="sc-cSHVUG iLCKLm sc-fjdhpX eDFlZt"
    >
      <i
        class="icon-watch_later sc-jTzLTM ftCaFc"
        color="darkBlue"
        data-test="icon"
      />
    </div>
    <span
      class="sc-htoDjs iQeslt"
      color="darkBlue"
      data-test="span"
    >
      my secoundrry external-linked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) linked Buttons 3`] = `
<a
  class="sc-chPdSV dqReCj"
  href="/avatar"
  target="_self"
>
  <button
    class="sc-jzJRlG bvPtYt"
    data-styletype="tertiary"
    data-test="button"
    type="submit"
  >
    <div
      class="sc-cSHVUG iLCKLm sc-fjdhpX eDFlZt"
    >
      <i
        class="icon-watch_later sc-jTzLTM ftCaFc"
        color="darkBlue"
        data-test="icon"
      />
    </div>
    <span
      class="sc-htoDjs iQeslt"
      color="darkBlue"
      data-test="span"
    >
      my tertiary internal-liked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) red Buttons 1`] = `
<button
  class="sc-jzJRlG dIWnWG"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) red Buttons 2`] = `
<button
  class="sc-jzJRlG dIWnWG"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs Bjkai"
    color="red"
    data-test="span"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) red Buttons 3`] = `
<button
  class="sc-jzJRlG dIWnWG"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 1`] = `
<button
  class="sc-jzJRlG liiOHI"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs bgiUUZ"
    color="white"
    data-test="span"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 2`] = `
<button
  class="sc-jzJRlG liiOHI"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs jdlLkZ"
    color="yellow"
    data-test="span"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 3`] = `
<button
  class="sc-jzJRlG liiOHI"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs iQeslt"
    color="darkBlue"
    data-test="span"
  >
    my tertiary button
  </span>
</button>
`;
